# rsdocs2docset

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  cargo-docset  create-docs  create-rs-docset  pipeline.yml  pre-commit  release  rsdocs2docset.bash-completion  rustfmt.toml  todo
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: Info.plist.tmpl  cli.rs  lib.rs  main.rs
src/dom/: fixtures.rs  manipulator.rs  manipulator_tests.rs  mod.rs  parser.rs  parser_tests.rs
src/dom_manipulator/: mod.rs
