[package]
name = "rsdocs2docset"
version = "0.1.0"
authors = ["Daniel Bornkessel"]
description = "This is a small tool to generate a docsets for [Dash](https://kapeli.com/dash) / [Velocity](http://velocity.silverlakesoftware.com) / [Zeal](https://zealdocs.org) / [LovelyDocs](https://zealdocs.org) out of Rust docs."
homepage = "https://git.bornkessel.com/kesselborn/rsdocs2docset"
repository = "https://git.bornkessel.com/kesselborn/rsdocs2docset"
readme = "README.md"
keywords = ["docs", "docset", "rsdoc"]
license = "MIT"

[[bin]]
name = "rsdocs2docset"
doc = false

[dependencies]
html5ever = "*"
html5ever-atoms = "*"
string_cache = "*"
sqlite = "*"
tendril = "*"
clap = "*"
quick-error = "*"
regex = "*"
url = "*"
